make sure headers align

--- a/packages/augur-ui/src/modules/portfolio/components/common/filled-orders-table.styles.less
+++ b/packages/augur-ui/src/modules/portfolio/components/common/filled-orders-table.styles.less
@@ -58,7 +58,7 @@
     > ul:not(:first-of-type) {
       border-top: 1px solid fade(@color-dark-grey, 50%);
       justify-content: flex-end;
-      margin: 0 @size-16;
+      margin: 0 @size-24;
 
       > li {
         .mono-9;
